--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <title>Hack-A-Typewriter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="typewriter.css" rel="stylesheet">
     <link href="index.css" rel="stylesheet">
@@ -9,7 +10,10 @@
 <body>
 
 <div class="typewriter" style="margin: auto;">
-The quick brown fox jumps over the lazy dog.
+The quick brown fox jumps over the a dog.
+
+To use the typewriter, just start typing.
+
 </div>
 
 <div class="footer">
