Fix typo, add old incorrect screenshot

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="typewriter" style="margin: auto;">
-The quick brown fox jumps over the a dog.
+The quick brown fox jumps over a lazy dog.
 
 To use the typewriter, just start typing.
 
